metadata/force-app/main/default/objects/Account/fields/MyExternalId__c.field-meta.xml
<CustomField>
    <fullName>MyExternalId__c</fullName>
    <externalId>true</externalId>
    <label>MyExternalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>