metadata/force-app/main/default/objects/Account/fields/test_field_1__c.field-meta.xml
<CustomField>
    <fullName>test_field_1__c</fullName>
    <label>test_field_1</label>
    <length>123</length>
    <type>Text</type>
</CustomField>