metadata/force-app/main/default/objects/Account/fields/test_formula__c.field-meta.xml
<CustomField>
    <fullName>test_formula__c</fullName>
    <formula>AccountNumber +  Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test_formula</label>
    <type>Text</type>
</CustomField>